2008-09-10 Braden McDaniel  <braden@endoframe.com>

	Added projects for the parse-vrml97 and parse-x3dvrml test
	programs to the Visual C++ solution.

	* ide-projects/Makefile.am: Distribute the project files.
	* ide-projects/Windows/VisualC9_0/OpenVRML/OpenVRML.sln
	* ide-projects/Windows/VisualC9_0/OpenVRML/parse-x3dvrml/parse-x3dvrml.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/parse-vrml97/parse-vrml97.vcproj

2008-09-10 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/OpenVRML.sln: Changed
	to CRLF line endings.

2008-09-09 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/bounding_volume.cpp
	(openvrml::bounding_sphere::do_enclose(const
	std::vector<vec3f>&)): No reason to define span before
	setting its value.

2008-09-09 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/javascript/javascript.vcproj:
	Removed unnecessary backslash.

2008-09-09 Braden McDaniel  <braden@endoframe.com>

	Order include directories consistently for Debug and Release
	configurations.

	* ide-projects/Windows/VisualC9_0/OpenVRML/sdl-viewer/sdl-viewer.vcproj
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj

2008-09-09 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/sdl-viewer/sdl-viewer.vcproj:
	Changed to CRLF line endings.

2008-09-08 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp: Added doc-comments and
	exception specifications to openvrml_::xml_reader.

2008-09-08 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml_::xml_reader): xmlTextReaderPtr, not XmlTextReaderPtr.

2008-09-08 Braden McDaniel  <braden@endoframe.com>

	Use XmlLite on Windows rather than libxml.

	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj
	Added dependencies shlwapi.lib and XmlLite.lib; removed
	dependencies libxml2_a_dll.lib, iconv_a.lib, and WS2_32.lib.