@@ -29,6 +29,11 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "parse-x3dvrml", "parse-x3dv
 		{E5287CD2-4BAC-4341-AF28-A1F9C0F5949C} = {E5287CD2-4BAC-4341-AF28-A1F9C0F5949C}
 	EndProjectSection
 EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "pretty-print", "pretty-print\pretty-print.vcproj", "{EFCFAB14-FC2B-4816-AD49-DC0E6F4D04E1}"
+	ProjectSection(ProjectDependencies) = postProject
+		{E5287CD2-4BAC-4341-AF28-A1F9C0F5949C} = {E5287CD2-4BAC-4341-AF28-A1F9C0F5949C}
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Win32 = Debug|Win32
@@ -59,6 +64,10 @@ Global
 		{38979260-FBDB-49E6-A0AD-15E3C8C553A3}.Debug|Win32.Build.0 = Debug|Win32
 		{38979260-FBDB-49E6-A0AD-15E3C8C553A3}.Release|Win32.ActiveCfg = Release|Win32
 		{38979260-FBDB-49E6-A0AD-15E3C8C553A3}.Release|Win32.Build.0 = Release|Win32
+		{EFCFAB14-FC2B-4816-AD49-DC0E6F4D04E1}.Debug|Win32.ActiveCfg = Debug|Win32
+		{EFCFAB14-FC2B-4816-AD49-DC0E6F4D04E1}.Debug|Win32.Build.0 = Debug|Win32
+		{EFCFAB14-FC2B-4816-AD49-DC0E6F4D04E1}.Release|Win32.ActiveCfg = Release|Win32
+		{EFCFAB14-FC2B-4816-AD49-DC0E6F4D04E1}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
